Add submission retrieval functionality and update submission modele.
